feat: BFF generator DEMO project result - endpoints, tests and ResponseResults fixed
